Fixed drug table overflow in profile pages

--- a/app/css/_tables.scss
+++ b/app/css/_tables.scss
@@ -403,4 +403,10 @@
 
     */
 
+
+
+    .scroll-table-panel .table-panel{
+        overflow-x: auto;
+    }
+
 }
